Mac OS update
Mac OS - updated Dock icon assignment